reset colors to blue, added overflow fix to main

--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,13 @@ CSS TABLE OF CONTENTS
     --color-headings: rgb(0 0 0 / 1);
     --color-links: rgb(51 102 204 / 1);
     --color-links-dark: rgb(0 51 153 / 1);
-    --color-accent-color: rgb(175, 33, 191);
-    --color-header-bg: rgb(105, 0, 102);
+    --color-accent-color: rgb(51, 51, 153);
+    --color-header-bg: rgb(0, 0, 102);
     --color-header-links: rgb(255, 255, 255);
-    --color-hero-bg: rgb(63, 15, 61);
+    --color-hero-bg: rgb(0, 0, 51);
     --color-footer-bg: rgba(0, 0, 0, 1);
     --color-footer-text: rgb(255, 255, 255);
-    --color-footer-links: rgb(245, 178, 255);
+    --color-footer-links: rgb(204, 204, 255);
 
     /* BASE TYPOGRAPHY */
     --font-body: Helvetica, Arial, sans-serif;
@@ -230,7 +230,7 @@ img {
     list-style: none;
     margin: 0;
     padding: 0;
-    background-color: red;
+    background-color: var(--color-accent-color);
     position: fixed;
     top: 0;
     right: 0;
@@ -323,7 +323,7 @@ img {
 
 /* SITE MAIN */
 .site-main {
-    /* background-color: red; */
+    overflow-x: hidden;
 }
 
 /* ALL SECTIONS */
